refactoring, fill with colors

--- a/create_penrose_tiling.ipynb
+++ b/create_penrose_tiling.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2dc4099f-561d-4a70-b39c-0a9879bc155a",
+   "metadata": {},
+   "source": [
+    "# Generation of Penrose Tilings of Type P2 and P3 by Deflation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addf7675-29a9-4d4e-af67-063635af2033",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e96d31ae-3b96-4f84-b946-17b59392e9fc",
@@ -8,7 +24,61 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0074d2d0-3ec2-4827-9e31-c8eb9aca67a0",
+   "metadata": {},
+   "source": [
+    "## Settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ab4fd4c-f426-4578-b915-dea831a910f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRIANGLE_TYPES = {1, 2} # type 1: for P2-tilings, type 2: for P3-tilings\n",
+    "SHAPES = {'A', 'O'} # 'A': acute equilateral triangle, 'O': obtuse equilateral triangle \n",
+    "SIDES = {'F', 'B'} # 'F': frontside, 'B': backside\n",
+    "\n",
+    "LINE_COLOR = 'black'\n",
+    "TRIANGLE_COLOR_PER_TYPE_SHAPE_SIDE = {\n",
+    "    1: {\n",
+    "        'A': {\n",
+    "            'F': (1, 0, 0, 1),\n",
+    "            'B': (1, 0, 0, 0.5),\n",
+    "        },\n",
+    "        'O': {\n",
+    "            'F': (1, 0.5, 0, 1),\n",
+    "            'B': (1, 0.5, 0, 0.5),\n",
+    "        }\n",
+    "    },\n",
+    "    2: {\n",
+    "        'A': {\n",
+    "            'F': (0, 0, 1, 1),\n",
+    "            'B': (0, 0, 1, 0.5),\n",
+    "        },\n",
+    "        'O': {\n",
+    "            'F': (0, 0.5, 1, 1),\n",
+    "            'B': (0, 0.5, 1, 0.5),\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cb952e8-0ede-4cab-a0c1-31ccc28adafd",
+   "metadata": {},
+   "source": [
+    "## Data structres and helpers"
    ]
   },
   {
@@ -19,6 +89,7 @@
    "outputs": [],
    "source": [
     "def rotate(point, origin, angle_deg):\n",
+    "    '''rotates the complex number point around the complex number origin by angle_deg in degrees (counter-clockwise)'''\n",
     "    angle_rad = np.deg2rad(angle_deg)\n",
     "    return (point - origin) * np.exp(1j * angle_rad) + origin"
    ]
@@ -30,25 +101,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triangle_types = {1, 2} # type 1: for P2-tilings, type 2: for P3-tilings\n",
-    "shapes = {'A', 'O'} # 'A': acute equilateral triangle, 'O': obtuse equilateral triangle \n",
-    "sides = {'F', 'B'} # 'F': frontside, 'B': backside\n",
-    "tolerance = 0.00000001\n",
-    "\n",
     "class RobinsonTriangle:\n",
+    "    '''containter for Robinson triangles'''\n",
     "    def __init__(self, t_type, shape, side, A, B):\n",
-    "        if t_type not in triangle_types:\n",
+    "        if t_type not in TRIANGLE_TYPES:\n",
     "            raise ValueError('t_type must be in {}, but is {}'.format(triangle_types, t_type))\n",
     "        self.t_type = t_type\n",
-    "        if shape not in shapes:\n",
+    "        if shape not in SHAPES:\n",
     "            raise ValueError('shape must be in {}, but is {}'.format(shapes, shape))\n",
     "        self.shape = shape\n",
     "        self.side = side\n",
-    "        if side not in sides:\n",
+    "        if side not in SIDES:\n",
     "            raise ValueError('side must be in {}, but is {}'.format(sides, side))\n",
     "        self.side = side\n",
-    "        if abs(B - A) < tolerance:\n",
-    "            raise ValueError('points {} and {} too close'.format(A, B))\n",
+    "        if abs(B - A) == 0:\n",
+    "            raise ValueError('points {} and {} are identical, but must be different'.format(A, B))\n",
     "        if not isinstance(A, complex):\n",
     "            raise ValueError('A must be a complex number but is {}'.format(type(A)))\n",
     "        if not isinstance(B, complex):\n",
@@ -59,15 +126,17 @@
     "        self.C = rotate(B, A, rot_angle_deg)\n",
     "    def __repr__(self):\n",
     "        return '[t_type={}, shape={}, side={}, A={}, B={}, C={}]'.format(self.t_type, self.shape, self.side, self.A, self.B, self.C)\n",
-    "    def draw(self):\n",
-    "        plt.plot([self.A.real, self.B.real], [self.A.imag, self.B.imag], \n",
-    "                 [self.A.real, self.C.real], [self.A.imag, self.C.imag], \n",
-    "                 [self.B.real, self.C.real], [self.B.imag, self.C.imag],\n",
-    "                color='black'\n",
-    "                )\n",
+    "    def draw(self, draw_base_side=True, fill=True):\n",
+    "        li = [[self.A.real, self.B.real], [self.A.imag, self.B.imag], [self.A.real, self.C.real], [self.A.imag, self.C.imag]]\n",
+    "        if draw_base_side:\n",
+    "            li += [[self.B.real, self.C.real], [self.B.imag, self.C.imag]]\n",
+    "        plt.plot(*li, color='black')\n",
+    "        if fill:\n",
+    "            plt.fill([self.A.real, self.B.real, self.C.real], [self.A.imag, self.B.imag, self.C.imag], color=TRIANGLE_COLOR_PER_TYPE_SHAPE_SIDE[self.t_type][self.shape][self.side])\n",
     "    def deflate(self):\n",
     "        if self.t_type == 1:\n",
-    "            raise NotImplementedError('deflation for t_type 1 is not implemented yet')\n",
+    "            return []\n",
+    "            # raise NotImplementedError('deflation for t_type 1 is not implemented yet')\n",
     "        elif self.t_type == 2:\n",
     "            if self.shape == 'A':\n",
     "                if self.side == 'F':\n",
@@ -103,104 +172,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b455e00a-5850-4ae4-b693-59c13e621a2b",
+   "cell_type": "markdown",
+   "id": "1f987f8a-7ae0-4414-9e6a-affd6677a293",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rt_2_A_F = RobinsonTriangle(2, 'A', 'F', complex(0), complex(1))\n",
-    "rt_2_A_F.draw()"
+    "## Colors and deflation of Robinson triangles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869fb6cd-5f9a-447c-a395-cae7990bb60d",
+   "id": "d9a219ed-679a-4a15-837c-7f97fe979184",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(plt.figure().get_size_inches())\n",
-    "rt_2_A_F.draw()\n",
-    "for t in rt_2_A_F.deflate():\n",
-    "    t.draw()\n",
-    "print(plt.figure().get_size_inches())\n",
-    "print(2 * plt.figure().get_size_inches())\n",
-    "plt.figure(figsize= 2 * plt.figure().get_size_inches())\n",
-    "print(plt.figure().get_size_inches())\n",
+    "def draw_rt_and_deflation(i, t_type, shape, side):\n",
+    "    plt.sca(axs[i,0])\n",
+    "    plt.title('type {}, shape {} and side {}:'.format(t_type, shape, side))\n",
+    "    plt.axis('equal')\n",
+    "    plt.axis('off')\n",
+    "    rt = RobinsonTriangle(t_type, shape, side, complex(0), complex(1))\n",
+    "    rt.draw()\n",
+    "    plt.sca(axs[i,1])\n",
+    "    plt.title('Deflation of type {}, shape {} and side {}:'.format(t_type, shape, side))\n",
+    "    plt.axis('equal')\n",
+    "    plt.axis('off')\n",
+    "    for t in rt.deflate():\n",
+    "        t.draw()\n",
+    "\n",
+    "fig, axs = plt.subplots(8, 2, figsize=(10, 20))\n",
+    "        \n",
+    "for (i, (t_type, shape, side)) in enumerate(itertools.product(TRIANGLE_TYPES, SHAPES, SIDES)):\n",
+    "    draw_rt_and_deflation(i, t_type, shape, side)\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f50f365d-c41a-4764-a5f9-485edbcc3156",
+   "cell_type": "markdown",
+   "id": "554c5e1b-72f6-4bf2-9ab6-6731fe9e1e87",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rt_2_A_B = RobinsonTriangle(2, 'A', 'B', complex(0), complex(1))\n",
-    "rt_2_A_B.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19edb513-b232-4fe2-a7ab-efe31e53e972",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_2_A_B.draw()\n",
-    "for t in rt_2_A_B.deflate():\n",
-    "    t.draw()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b28f29d-b7fa-480e-a88a-9c96cc1091cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_2_O_F = RobinsonTriangle(2, 'O', 'F', complex(0), complex(1))\n",
-    "rt_2_O_F.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5937bf37-ba0d-4ef3-8c95-23e33d2fee7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_2_O_F.draw()\n",
-    "for t in rt_2_O_F.deflate():\n",
-    "    t.draw()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1f22144-fd67-4b8e-a0df-b49298a85d41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_2_O_B = RobinsonTriangle(2, 'O', 'B', complex(0), complex(1))\n",
-    "rt_2_O_B.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5097b1e-1f1a-497a-9459-899872d52398",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_2_O_B.draw()\n",
-    "for t in rt_2_O_B.deflate():\n",
-    "    t.draw()\n",
-    "plt.show()"
+    "## Some more helpers"
    ]
   },
   {
@@ -211,6 +224,7 @@
    "outputs": [],
    "source": [
     "def deflate_triangles(rts):\n",
+    "    '''deflates all robinson triangles within rts and returns the list of all deflated robinson triangles'''\n",
     "    res = []\n",
     "    for rt in rts:\n",
     "        res += rt.deflate()\n",
@@ -225,20 +239,11 @@
    "outputs": [],
    "source": [
     "def deflate(first_rt, iter_depth):\n",
+    "    '''returns the list of the robinson triangles after iter_depth deflations of the starting robinson triangle first_rt'''\n",
     "    res = [first_rt]\n",
     "    for i in range(iter_depth):\n",
     "        res = deflate_triangles(res)\n",
     "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd8a1b96-0852-432c-89d2-cb32a8528aeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig_width = 50"
    ]
   },
   {
@@ -249,6 +254,7 @@
    "outputs": [],
    "source": [
     "def get_box(rts):\n",
+    "    '''returns the bounding box of a list of robinson triangles'''\n",
     "    x_min = min([min(rt.A.real, rt.B.real, rt.C.real) for rt in rts])\n",
     "    x_max = max([max(rt.A.real, rt.B.real, rt.C.real) for rt in rts])\n",
     "    y_min = min([min(rt.A.imag, rt.B.imag, rt.C.imag) for rt in rts])\n",
@@ -263,50 +269,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_rts(rts):\n",
+    "def draw_rts(rts, draw_base_side=False, fill=False, fig_width=50, svg_file_name=''):\n",
+    "    '''draws the robinson triangles within rts'''\n",
     "    (x_min, y_min), (x_max, y_max) = get_box(rts)\n",
     "    y_scale = (x_max - x_min) / (y_max - y_min)\n",
     "    plt.figure(figsize=(fig_width, fig_width / y_scale))\n",
     "    plt.axis('equal')\n",
     "    plt.axis('off')\n",
     "    for t in rts:\n",
-    "        t.draw()\n",
-    "    plt.savefig(\"robinson_triangles.svg\")\n",
+    "        t.draw(draw_base_side=draw_base_side, fill=fill)\n",
+    "    if svg_file_name:\n",
+    "        plt.savefig(svg_file_name)\n",
     "    plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28d37029-c260-4f39-9ffe-b3ba7dd67c74",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "c4c69209-5d84-4037-8494-d8f8854ff2de",
+   "metadata": {},
    "source": [
-    "def draw_penrose_tiling_from_rts(rts):\n",
-    "    (x_min, y_min), (x_max, y_max) = get_box(rts)\n",
-    "    y_scale = (x_max - x_min) / (y_max - y_min)\n",
-    "    plt.figure(figsize=(fig_width, fig_width / y_scale))\n",
-    "    plt.axis('equal')\n",
-    "    plt.axis('off')\n",
-    "    n = len(rts)\n",
-    "    neigbouring_triangles = []\n",
-    "    for i in range(n):\n",
-    "        rt1 = rts[i]\n",
-    "        for j in range(i, n):\n",
-    "            rt2 = rts[j]\n",
-    "            if rt1.shape == rt2.shape and rt1.side != rt2.side:\n",
-    "                if abs(rt1.B - rt2.C) < tolerance and abs(rt1.C - rt2.B) < tolerance:\n",
-    "                    plt.plot(\n",
-    "                        [rt1.A.real, rt1.B.real], [rt1.A.imag, rt1.B.imag],\n",
-    "                        [rt1.A.real, rt1.C.real], [rt1.A.imag, rt1.C.imag],\n",
-    "                        [rt2.A.real, rt2.B.real], [rt2.A.imag, rt2.B.imag],\n",
-    "                        [rt2.A.real, rt2.C.real], [rt2.A.imag, rt2.C.imag],\n",
-    "                        color='black')\n",
-    "\n",
-    "    plt.savefig(\"penrose_tiling.svg\")\n",
-    "    plt.show()"
+    "## Draw Penrose tilings"
    ]
   },
   {
@@ -316,9 +298,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_penrose_tiling(t_type, shape, side, iter_depth, A=complex(0), B=complex(1)):\n",
+    "def draw_penrose_tiling(t_type=1, shape='A', side='F', iter_depth=8, A=complex(0), B=complex(1), draw_base_side=False, fill=True, fig_width=50, svg_file_name=''):\n",
+    "    '''draws the penrose tiling after iter_depth deflations, starting with a robinson triangle of type t_type, shape shape, side side, point A and point B.'''\n",
     "    rt = RobinsonTriangle(t_type, shape, side, A, B)\n",
-    "    draw_penrose_tiling_from_rts(deflate(rt, iter_depth))"
+    "    draw_rts(deflate(rt, iter_depth), draw_base_side=draw_base_side, fill=fill, fig_width=fig_width, svg_file_name=svg_file_name)"
    ]
   },
   {
@@ -328,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_penrose_tiling(2, 'O', 'B', 8)"
+    "draw_penrose_tiling(2, 'A', 'F', 8)"
    ]
   },
   {
@@ -338,37 +321,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_penrose_tiling(2, 'O', 'B', 8, A=rotate(complex(1), 0, 36), B=complex(0))"
+    "draw_penrose_tiling(2, 'O', 'B', 8, draw_base_side=True, fill=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a315215e-5af6-4b35-91fb-e08c617bf85d",
+   "id": "4e79ad04-8c14-41f3-b771-5bb0fff82c90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = deflate(rt_2_O_B, 8)"
+    "for (t_type, shape, side) in itertools.product(TRIANGLE_TYPES, SHAPES, SIDES):\n",
+    "    if t_type == 2:\n",
+    "        draw_penrose_tiling(t_type, shape, side, 8, fill=False, svg_file_name='penrose_tiling_{}_{}_{}.svg'.format(t_type, shape, side))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee9586a-a86f-46d8-8bd9-fed699180c51",
+   "id": "e4a9932d-1623-49ac-8646-665ff1ab28fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_rts(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c976f20-6533-478f-b255-68a8295b29d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "draw_penrose_tiling_from_rts(res)"
+    "for (t_type, shape, side) in itertools.product(TRIANGLE_TYPES, SHAPES, SIDES):\n",
+    "    if t_type == 2:\n",
+    "        draw_penrose_tiling(t_type, shape, side, 8, svg_file_name='penrose_tiling_colored_{}_{}_{}.svg'.format(t_type, shape, side))"
    ]
   }
  ],
